# library

./: .gitattributes  .gitignore  LICENSE  Pipfile  README.md  TOC.md  main.py  meta.bak.json  meta.json  pyproject.toml  requirements.txt
ai/: Hands-On Machine Learning with Scikit-Learn and TensorFlow.epub  Python深度学习.epub  Python深度学习：基于TensorFlow.epub  SRE-Google运维解密.opf  Tensorflow-实战Google深度学习框架.epub  推荐系统实战.opf  深度学习入门-基于Python的理论与实现.opf
algorithm/: 具体数学 - 第2版.epub  深度学习的数学.epub  程序员的数学_3_线性代数.epub  算法 - 第4版(图灵文字版).opf  算法-第4版.opf  算法图解.epub  算法引论：一种创造性方法(扫描,无书签).opf  算法新解.opf  算法设计与分析基础.opf  编译原理-第二版.opf
android/: Android研发工程师高级进阶.epub  Android高薪之路：Android程序员面试宝典.opf  深入理解Android卷I.epub  深入理解Android卷II.epub
c/: C Primer Plus - 第6版.epub  C Primer Plus第五版 中文版.epub  Unix环境高级编程-第3版.epub  数据结构与算法分析-C.opf  算法精解-c语言描述.epub
c++/: C++ Primer Plus  第6版  中文版.opf  C++Primer 第5版.opf  C++并发编程实战.epub  Linux多线程服务端编程.epub  完美C ++ (第5版).opf  数据结构与算法分析–C++(第3版,扫描,书签).opf  高速上手C++11-14.epub
cloud/: Kubernetes in Action-中文版.epub  云原生服务网格Istio.epub
css/: CSS揭秘.epub  CSS权威指南第三版.epub  CSS禅意花园(修订版).epub  响应式Web设计_HTML5和CSS3实战 - Ben Frain.epub
cvs/: progit2-gitbook.epub  progit2.epub
data/: Apache-Kafka源码剖析.epub  Kafka权威指南.epub  MySQL技术内幕.epub  Redis实战.epub  Redis开发与运维.epub  Redis设计与实现.epub  数据密集型应用系统设计-Martin Kleppmann.epub  高性能MySQL.epub
design/: 写给大家看的设计书-第四版.epub  响应式Web设计全流程解析.epub
engineering/: Exercises in Programming Style - [Mei ] Cristina Videira Lopes.opf  Google软件测试之道.epub  esigning-and-deploying-microservices.epub  人月神话-二十周年.epub  代码整洁之道.epub  企业it架构的转型之道.epub  (+16 more)
(+51 files in other folders)
