[tool.poetry]
name = "library"
version = "0.1.0"
description = "个人图书库"
authors = ["zeromake <a390720046@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ebooklib = "*"
"pypdf2" = "*"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true
